--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2",
     "@heroicons/react": "^2",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/stripe": "^8.0.417",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.539.0",
     "micro": "^10.0.1",
@@ -21,7 +22,7 @@
     "openai": "^4",
     "react": "^18",
     "react-dom": "^18",
-    "stripe": "^18.4.0",
+    "stripe": "^14.25.0",
     "svix": "^1.74.1"
   },
   "devDependencies": {
