--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react": "18.3.24",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
+    "dotenv": "^17.2.2",
     "eslint": "^8",
     "eslint-config-next": "latest",
     "postcss": "^8.5.6",
