--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
       "@/*": [
         "src/*"
       ]
-    }
+    },
+     "typeRoots": ["./types", "./node_modules/@types"]
   },
   "include": [
     "**/*.ts",
