chore: prep for prod deploy (env, pricing notice, checkout tweaks)

--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@headlessui/react": "^2",
     "@heroicons/react": "^2",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/file-saver": "^2.0.7",
     "@types/stripe": "^8.0.417",
+    "docx": "^9.5.1",
+    "file-saver": "^2.0.5",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.539.0",
     "micro": "^10.0.1",
