--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^5.46.2",
+    "@clerk/clerk-react": "^5.47.0",
     "@clerk/clerk-sdk-node": "^5.1.6",
-    "@clerk/nextjs": "^6.31.10",
+    "@clerk/nextjs": "^6.32.0",
     "@clerk/types": "^4.85.0",
     "@headlessui/react": "^2",
     "@heroicons/react": "^2",
@@ -22,16 +22,21 @@
     "file-saver": "^2.0.5",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.539.0",
+    "mammoth": "^1.10.0",
     "micro": "^10.0.1",
     "next": "latest",
-    "openai": "^4",
+    "openai": "^5.22.0",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^5.4.149",
     "react": "^18",
     "react-dom": "^18",
     "stripe": "^14.25.0",
-    "svix": "^1.74.1"
+    "svix": "^1.74.1",
+    "tesseract.js": "^5.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "18.3.24",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
